Fix info.component spacing

--- a/src/app/info/info.component.scss
+++ b/src/app/info/info.component.scss
@@ -36,7 +36,7 @@
 
     h1 {
       flex-basis: 100%;
-      margin-bottom: $spacer * 1.5;
+      margin-bottom: $spacer;
       font-size: 1.375rem; // 22px
       font-weight: $font-weight-bold;
     }
